edited url for each file

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 
     <!-- ALL PATIENTS -->
 
-    <div class="container">
+    <div id="createPatients" class="container">
 
-        <button id="goToCreatePat" class="btn btn-primary mb-2 hide">Create Patient</button>
+        <button id="goToCreatePat" href="file:///Users/milosmetlic/Desktop/darko/dental-office/index.html/createPatients" class="btn btn-primary mb-2 hide">Create Patient</button>
         <div id="allPatients" class="row">
 
         </div>
