--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="form-group">
                 <input type="text" class="form-control" id="patientPhoneNum" placeholder="Phone num">
             </div>
-            <button id="createPatBtn" class="btn btn-primary">Create Patient</button>
+            <button id="createPatBtn" href="" class="btn btn-primary">Create Patient</button>
             <p id="emergencyMsg"></p>
         </form>
     </div>
@@ -110,7 +110,7 @@
 
     <div id="createPatients" class="container">
 
-        <button id="goToCreatePat" href="file:///Users/milosmetlic/Desktop/darko/dental-office/index.html/createPatients" class="btn btn-primary mb-2 hide">Create Patient</button>
+        <button id="goToCreatePat" href="patient/create" class="btn btn-primary mb-2 hide">Create Patient</button>
         <div id="allPatients" class="row">
 
         </div>
