--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./ui.js"></script>
+    <script src="./data.js"></script>
     <script src="./main.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
