closeButton function, hover

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <link
             href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css"
             rel="stylesheet">
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="stylesheet" href="./style.css">
 
         <!-- CONTAINER DIV -->
@@ -141,7 +142,8 @@
         <section id="patientsSection" class="container hide">
 
             <div class="buttonsWrapper justify-between">
-                <button id="logOut" class="btn btn-primary mb-2 buttonsWidth center">Log Out</button>
+                <button id="logOut" class="btn btn-primary mb-2 buttonsWidth
+                    center">Log Out</button>
                 <button id="createPatientNavigationButton" class="btn
                     btn-primary mb-2 buttonsWidth">Create Patient </button>
             </div>
